--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@eva-design/eva": "^2.1.1",
     "@ui-kitten/components": "^5.1.1",
     "expo": "~42.0.1",
+    "expo-localization": "~10.2.0",
     "expo-status-bar": "~1.0.4",
+    "i18n-js": "^3.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
