--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-localization": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "formik": "^2.2.9",
     "i18n-js": "^3.8.0",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -26,7 +28,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
