add github hooks for CI

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build": "expo build:web",
     "test": "jest",
     "test:dev": "jest -o --watch --coverage=false",
     "updateSnapshots": "jest -u --coverage=false",
